# titanic-fairy

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/: Titanic Analisis.ipynb
tests/enums/: test_enums.py
tests/preprocessing/: test_dropper.py  test_encoder.py  test_imputer.py
titanic_fairy/: cli.py
titanic_fairy/enums/: titanic_fields.py
titanic_fairy/helpers/: check_data.py  load_and_save.py  train_test_split.py
titanic_fairy/metrics/: evaluate.py  graphics.py
titanic_fairy/model/: train_model.py
titanic_fairy/preprocessing/: dropper.py  encoder.py  imputer.py  preprocess.py
