[tool.poetry]
name = "titanic-fairy"
version = "0.1.0"
description = ""
authors = ["Cristobal Valenzuela Musura <cristobal.valenzuelamusura@cencosud.cl>"]
readme = "README.md"
packages = [{include = "titanic_fairy"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
pandas = "^2.0.2"
sklearn = "^0.0.post5"
matplotlib = "^3.7.1"
typer = "^0.9.0"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
