[tool.poetry]
name = "titanic-fairy"
version = "0.1.0"
description = ""
authors = ["Cristobal Valenzuela Musura <cristobal.valenzuelamusura@cencosud.cl>"]
readme = "README.md"
packages = [{include = "titanic_fairy"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.3.1"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
typer = "^0.9.0"
scikit-learn = "^1.2.2"
coverage = "^7.2.7"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"


[tool.poetry.scripts]
titanic-fairy = "titanic_fairy.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
